[gd_scene load_steps=9 format=3 uid="uid://dfprq3k47wt75"]

[ext_resource type="Script" path="res://scenes/level_editor/assets/level_editor_menu/items/items_settings/item_settings.gd" id="1_uaw8x"]
[ext_resource type="Script" path="res://scenes/level_editor/assets/level_editor_menu/items/items_settings/note_settings.gd" id="2_ve8gy"]
[ext_resource type="Script" path="res://scenes/level_editor/assets/level_editor_menu/items/items_settings/event_settings.gd" id="3_eo8qq"]
[ext_resource type="Script" path="res://scenes/level_editor/assets/level_editor_menu/items/items_settings/marker_settings.gd" id="4_7c5kb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_di6fo"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.286275, 0.294118, 0.352941, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.0745098, 0.0745098, 0.0745098, 0.372549)
shadow_size = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_thphq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rx6d6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rub5a"]

[node name="ItemSettings" type="PanelContainer"]
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.81
theme_override_styles/panel = SubResource("StyleBoxFlat_di6fo")
script = ExtResource("1_uaw8x")

[node name="NoteSettings" type="HFlowContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 15
script = ExtResource("2_ve8gy")

[node name="NoteName" type="HBoxContainer" parent="NoteSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.19
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="NoteSettings/NoteName"]
layout_mode = 2
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="NoteSettings/NoteName"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_thphq")
placeholder_text = "Note"
max_length = 15

[node name="NoteDelay" type="HBoxContainer" parent="NoteSettings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="Label" type="Label" parent="NoteSettings/NoteDelay"]
layout_mode = 2
text = "Delay:"

[node name="SpinBox" type="SpinBox" parent="NoteSettings/NoteDelay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
focus_mode = 2
max_value = 10.0
step = 0.125
alignment = 1
update_on_text_changed = true

[node name="NoteID" type="HBoxContainer" parent="NoteSettings"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="NoteSettings/NoteID"]
layout_mode = 2
text = "ID: "

[node name="SpinBox" type="SpinBox" parent="NoteSettings/NoteID"]
layout_mode = 2
focus_mode = 2

[node name="NoteColor" type="ColorPickerButton" parent="NoteSettings"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_rx6d6")
toggle_mode = false
text = "Color"
color = Color(1, 1, 1, 1)
edit_alpha = false

[node name="NoteRotated" type="CheckBox" parent="NoteSettings"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_rub5a")
text = "Rotated"

[node name="SaveNote" type="Button" parent="NoteSettings"]
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
disabled = true
text = "Save Note"

[node name="EventSettings" type="HFlowContainer" parent="."]
visible = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
mouse_filter = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 15
script = ExtResource("3_eo8qq")

[node name="EventName" type="HBoxContainer" parent="EventSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.19
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="EventSettings/EventName"]
layout_mode = 2
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="EventSettings/EventName"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_thphq")
placeholder_text = "Event"
max_length = 15

[node name="EventID" type="HBoxContainer" parent="EventSettings"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="EventSettings/EventID"]
layout_mode = 2
text = "ID: "

[node name="SpinBox" type="SpinBox" parent="EventSettings/EventID"]
layout_mode = 2
focus_mode = 2

[node name="EventColor" type="ColorPickerButton" parent="EventSettings"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_rx6d6")
toggle_mode = false
text = "Color"
color = Color(1, 1, 1, 1)
edit_alpha = false

[node name="EventValue" type="HBoxContainer" parent="EventSettings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="Label" type="Label" parent="EventSettings/EventValue"]
layout_mode = 2
text = "Event Value:"

[node name="SpinBox" type="SpinBox" parent="EventSettings/EventValue"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
focus_mode = 2
min_value = -1000.0
max_value = 1000.0
step = 0.01
alignment = 1
update_on_text_changed = true

[node name="EventDelay" type="HBoxContainer" parent="EventSettings"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="Label" type="Label" parent="EventSettings/EventDelay"]
layout_mode = 2
text = "Delay:"

[node name="SpinBox" type="SpinBox" parent="EventSettings/EventDelay"]
layout_mode = 2
size_flags_stretch_ratio = 0.75
focus_mode = 2
max_value = 120.0
step = 0.125
alignment = 1
update_on_text_changed = true

[node name="SaveEvent" type="Button" parent="EventSettings"]
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
disabled = true
text = "Save Event"

[node name="MarkerSettings" type="HFlowContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 15
script = ExtResource("4_7c5kb")

[node name="MarkerName" type="HBoxContainer" parent="MarkerSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.19
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="MarkerSettings/MarkerName"]
layout_mode = 2
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="MarkerSettings/MarkerName"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_thphq")
placeholder_text = "Marker"
max_length = 15

[node name="MarkerColor" type="ColorPickerButton" parent="MarkerSettings"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_rx6d6")
toggle_mode = false
text = "Color"
color = Color(1, 1, 1, 1)
edit_alpha = false

[node name="SaveMarker" type="Button" parent="MarkerSettings"]
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
disabled = true
text = "Save Marker"

[connection signal="note_settings_changed" from="NoteSettings" to="." method="_on_settings_changed"]
[connection signal="note_settings_saved" from="NoteSettings" to="." method="_on_settings_saved"]
[connection signal="text_changed" from="NoteSettings/NoteName/LineEdit" to="NoteSettings" method="_on_name_edit"]
[connection signal="value_changed" from="NoteSettings/NoteDelay/SpinBox" to="NoteSettings" method="_on_delay_value_changed"]
[connection signal="value_changed" from="NoteSettings/NoteID/SpinBox" to="NoteSettings" method="_on_id_value_changed"]
[connection signal="color_changed" from="NoteSettings/NoteColor" to="NoteSettings" method="_on_note_color_changed"]
[connection signal="toggled" from="NoteSettings/NoteRotated" to="NoteSettings" method="_on_note_rotated_toggled"]
[connection signal="pressed" from="NoteSettings/SaveNote" to="NoteSettings" method="_on_save_note_pressed"]
[connection signal="event_settings_changed" from="EventSettings" to="." method="_on_settings_changed"]
[connection signal="event_settings_saved" from="EventSettings" to="." method="_on_settings_saved"]
[connection signal="text_changed" from="EventSettings/EventName/LineEdit" to="EventSettings" method="_on_name_text_changed"]
[connection signal="value_changed" from="EventSettings/EventID/SpinBox" to="EventSettings" method="_on_id_value_changed"]
[connection signal="color_changed" from="EventSettings/EventColor" to="EventSettings" method="_on_event_color_changed"]
[connection signal="value_changed" from="EventSettings/EventValue/SpinBox" to="EventSettings" method="_on_event_value_changed"]
[connection signal="value_changed" from="EventSettings/EventDelay/SpinBox" to="EventSettings" method="_on_delay_value_changed"]
[connection signal="pressed" from="EventSettings/SaveEvent" to="EventSettings" method="_on_save_event_pressed"]
[connection signal="marker_settings_changed" from="MarkerSettings" to="." method="_on_settings_changed"]
[connection signal="marker_settings_saved" from="MarkerSettings" to="." method="_on_settings_saved"]
[connection signal="text_changed" from="MarkerSettings/MarkerName/LineEdit" to="MarkerSettings" method="_on_name_text_changed"]
[connection signal="color_changed" from="MarkerSettings/MarkerColor" to="MarkerSettings" method="_on_marker_color_changed"]
[connection signal="pressed" from="MarkerSettings/SaveMarker" to="MarkerSettings" method="_on_save_marker_pressed"]
